# kata

./: .gitignore  .gitmodules  README.md
c/: CMakeLists.txt  README.md
c++/CSVRecord/: CSVRecord.sln  CSVRecord.vcxproj  CSVRecordTest.vcxproj  Makefile  csvrecord.hpp  main.cpp  test.cpp  win_compat.hpp
c++/csv_import/: .gitignore  CSVRecord.vcxproj  CSVRecordTest.vcxproj  Makefile  import.hpp  main.cpp  test.cpp  win_compat.hpp
c/src/: CMakeLists.txt
c/src/algorithms/: CMakeLists.txt  euclid.c  euclid.h
c/src/coda/: CMakeLists.txt
c/src/coda/life/algorithms/: CMakeLists.txt  math.c  math.h
c/src/coda/life/graphs/: CMakeLists.txt  adjacency-matrix.c  vertex.h
c/src/coda/life/lists/: README.md  list-item.c  list-item.h  list-single.c  list-vtable.h  list.c  list.h
c/src/coda/life/logging/: CMakeLists.txt  error.c  error.h  log.c  log.h
c/src/coda/life/utilities/: CMakeLists.txt  string.c  string.h
c/src/collections/: CMakeLists.txt  README.md  list-item.c  list-item.h  list-single.c  list-single.h  list.h
c/src/rj/: CMakeLists.txt
c/src/rj/algorithms/: CMakeLists.txt  euclid.h
c/src/rj/collections/: CMakeLists.txt  README.md  internal.h  list-item.c  list-item.h  list-single.c  list-vtable.h  list.c  list.h
c/src/rj/graphs/: CMakeLists.txt  adjacency-matrix.c  adjacency-matrix.h  edge.h  private.h  vertex.h
c/src/rj/logging/: CMakeLists.txt  error.c  error.h  log.c  log.h
c/src/rj/strings/: CMakeLists.txt  string.c  string.h
c/src/ryjen/: CMakeLists.txt
c/src/ryjen/kata/: CMakeLists.txt
c/src/ryjen/kata/algorithms/: CMakeLists.txt  dvr.c
c/src/ryjen/kata/graphs/: adjacency-matrix.c  adjacency-matrix.h  edge.h  internal.h
c/src/ryjen/kata/lists/: CMakeLists.txt  internal.h  list-item.c  list-single.c  list-vtable.h  list.c  list.h
c/src/ryjen/kata/logging/: error.c  log.c
c/src/ryjen/kata/utilities/: string.c
c/tests/: CMakeLists.txt  challenge.c  kata.c
c/tests/algorithms/: euclid.c  math.c
c/tests/collections/: list-test.c
c/tests/lists/: list-test.c
challenges/: README.md
challenges/13/: solution.go  solution_test.go
challenges/2/: solution.go  solution_test.go
challenges/3/: solution_test.go
challenges/4/: README.md  solution.go
challenges/queue/: queue.go
challenges/tree/: node.go  tree.go
go/: README.md
go/1/: solution.go  solution_test.go
go/2/: README.md  solution.go
go/2/binary-gap/: solution.go  solution_test.go  test-input.txt
go/2/odd-occurances/: README.md  solution.go  solution_test.go
go/3/: README.md  solution.go
go/3/frog-jmp/: solution.go  solution_test.go
go/3/perm-missing-elem/: README.md  solution.go  solution_test.go
go/3/tape-equilibrium/: README.md  solution.go  solution_test.go
go/4/: solution_test.go
go/4/frog-river-one/: README.md  solution.go  solution_test.go
go/4/max-counters/: README.md  solution.go  solution_test.go
java/: README.md  build.gradle  pom.xml
java/tests/com/github/ryjen/: IterateTest.java  RyJenTest.java
problems/: README.md
problems/1/: README.md
problems/10/: README.md
problems/11/: README.md
problems/12/: README.md  solution.go
problems/13/: README.md  solution.go  solution_test.go
problems/14/: README.md
problems/15/: README.md
problems/16/: README.md  solution.go  solution_test.go
problems/17/: README.md  solution.go  solution_test.go
problems/18/: README.md  solution.go  solution_test.go
problems/19/: README.md
problems/2/: README.md  solution.go  solution_test.go
problems/20/: README.md
problems/21/: README.md
problems/22/: README.md  solution.go  solution_test.go
problems/23/: README.md
problems/24/: README.md
problems/25/: README.md  solution.go  solution_test.go
problems/26/: README.md
problems/27/: README.md
problems/28/: README.md  solution.go  solution_test.go
problems/29/: README.md
problems/3/: README.md
problems/30/: README.md
problems/31/: README.md
problems/32/: README.md
problems/33/: README.md
problems/34/: README.md
problems/35/: README.md
problems/36/: README.md
problems/37/: README.md
problems/38/: README.md
problems/39/: README.md
problems/4/: solution.go  solution_test.go
problems/40/: README.md
problems/41/: README.md
problems/42/: README.md
problems/43/: README.md
problems/5/: README.md
problems/6/: README.md  solution.c
problems/7/: README.md
problems/8/: README.md
problems/9/: README.md  solution.go  solution_test.go
python/2/: README.md  solution.py  solution_test.py
python/lib/: sort.py  sort_test.py
rust/: README.md
rust/tictactoe/: Cargo.toml
rust/tictactoe/src/: board.rs  game.rs  main.rs
(+84 files in other folders)
